fix: iOS Safari header icon gap

--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -25,7 +25,8 @@ nav {
 }
 
 .nav-socials {
-	display: flex;
+	display: grid;
+	grid-auto-flow: column;
 	column-gap: 1rem;
 
 	img {
